# gen-data-base-template

./: Cargo.toml  Makefile  index.html  leptosfmt.toml  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
src/: app.rs  components.rs  helpers.rs  main.rs
src/common/: constants.rs  types.rs
src/components/: checkbox.rs  form.rs  header.rs  select.rs
style/: output.css
