[package]
name = "gen-data-base-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.3.0"
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.63"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "console",
  "HtmlInputElement",
  "Event",
  "FileList",
  "File",
  "FileReader"
]
