[package]
name = "gen-data-base-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.3.1"
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.63"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "console",
  "HtmlInputElement",
  "Event",
  "FileList",
  "File",
  "FileReader"
]

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
